--- a/src/app/component/cart-details/cart-details.component.html
+++ b/src/app/component/cart-details/cart-details.component.html
@@ -12,7 +12,8 @@
                         <div class="card-body p-4">
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="col-md-2 col-lg-2 col-xl-2">
-                                    <img [src]="cart.image" class="img-fluid rounded-3" alt="Cotton T-shirt">
+                                    <img src="assets/images/{{cart.image}}" class="img-fluid rounded-3"
+                                        alt="Cotton T-shirt">
                                 </div>
                                 <div class="col-md-3 col-lg-3 col-xl-3">
                                     <p class="lead fw-normal mb-2">{{cart.title}}</p>
@@ -41,8 +42,7 @@
                 <ng-template #emptyCart>
                     <div class="card-body cart">
                         <div class="col-sm-12 empty-cart-cls text-center">
-                            <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130"
-                                class="img-fluid mb-4 mr-3">
+                            <img src="assets/images/emptycart.png" width="130" height="130" class="img-fluid mb-4 mr-3">
                             <h3><strong>Your Cart is Empty</strong></h3>
                             <h4>Add something to make me happy :)</h4>
 
