--- a/src/app/component/orders/orders.component.html
+++ b/src/app/component/orders/orders.component.html
@@ -81,7 +81,7 @@
         <ng-template #noOrder>
             <div class="card-body cart">
                 <div class="col-sm-12 empty-cart-cls text-center">
-                    <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+                    <img src="assets/images/emptycart.png" width=" 130" height="130" class="img-fluid mb-4 mr-3">
                     <h3><strong>You have no orders</strong></h3>
                     <h4>Buy something to make me happy :)</h4>
                 </div>
