--- a/src/app/component/product-detail/product-detail.component.html
+++ b/src/app/component/product-detail/product-detail.component.html
@@ -5,7 +5,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="images p-3">
-                            <div class="text-center p-4"> <img id="main-image" [src]="productData?.image" width="250" />
+                            <div class="text-center p-4"> <img id="main-image"
+                                    src="assets/images/{{productData?.image}}" width="250" />
                             </div>
 
                         </div>
